--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Socket client</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
 </head>
 <body>
     <h1>
         Socket Client
     </h1>
+    <hr>
+    <p>
+        <span id="lblOffline" class="text-danger">Offline</span>
+        <span id="lblOnline" class="text-success">Online</span>
+    </p>
+    <div class="row">
+        <div class="col">
+            <input id="txtMensaje" class="form-control" type="text">
+        </div>
+        <div class="col">
+            <button id="btnEnviar" class="btn btn-primary" >Enviar</button>
+        </div>
+    </div>
+    <script src="./socket.io/socket.io.js" ></script>
     <script src="./js/socket-client.js" ></script>
+    
 </body>
 </html>
